--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,20 @@
 html {
 background-color: rgb(255, 239, 213);
 }
+
+body { 
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;
+}
+
+.all-content-wrapper { 
+    display: flex;
+    flex-direction: column;
+    padding:0;
+    width:100%;
+    align-items: center;
+    justify-content: flex-start;
+    height:max-content;
+}
