--- a/code/style.css
+++ b/code/style.css
@@ -9,12 +9,169 @@ body {
     height:100%;
 }
 
-.all-content-wrapper { 
+ /* HEADER BOX */
+
+ .header-content {
+    width:100%;
+    padding:0;
+    height:100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.logo {
+     height:120px;
+     width: 120px;
+     object-fit: cover;
+     top: 10px;
+ }
+ 
+ /* BIG NEWS BOX */
+
+ .big-news-content {
     display: flex;
     flex-direction: column;
-    padding:0;
-    width:100%;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-    height:max-content;
+    width:100%;
+    color: white;
+    border-bottom: none;
+    margin-bottom: 15px; 
+    height:300px;
+    margin-top: 20px;
+    position: relative;
+}
+
+.big-news-image {
+    width:100%;
+    height:250px;
+    object-fit: cover;  
+    align-self: center;
+}
+
+.big-news-text-box {
+    width:100%;
+    margin-top:0;
+    font-size: 12px;
+    line-height: 1.2;
+    font-style:oblique;
+    text-align:left;
+}
+
+h2 {
+    font-family:Montserrat;
+    color: rgb(144 194 68);
+    font-size: 30px;
+    margin-top:10px;
+    text-align:left;
+    margin-bottom: 5px;
+    letter-spacing: 1.2px;
+}
+
+p {
+    display: none;
+}
+
+.big-news-button {
+    background-color: rgb(144 194 68);
+    font-size: 12px;
+    padding: 6px 10px 6px 10px;
+    font-family:Montserrat;
+    text-decoration: none;
+    border-radius: 10px;
+    color:antiquewhite;
+    font-weight: bold;
+    text-align: center;
+    margin-left:250px;
+    margin-right:20px;
+    letter-spacing: 0.5px;
+}
+
+.big-news-small-image {
+    display: none;
+}
+
+/* SMALL NEWS ITEM BOX */
+
+.small-news-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    width:100%;
+}
+
+.small-news-big-headline {
+    border-bottom: 2px solid  rgb(144 194 68);
+    width:100%;
+ }
+
+ h3 {
+    color: rgb(144 194 68);
+    margin:0;
+    font-family:Montserrat;
+    width: 200px;
+    height: 25px;
+    text-align: left;
+    padding-top: 5px;
+    letter-spacing: 1px;
+    border-radius:5px;
+    margin-bottom:0px;
+    font-style: oblique;
+}
+
+.small-news-item {
+    display: flex;
+    flex-direction: row;
+    align-items:flex-end;
+    justify-content: center;
+    padding:0;
+    box-shadow: 0;
+    border-radius: 5px;
+    width:100%;
+    height:180px;
+    margin:5px 0;
+    }
+
+.small-img-box {
+        height:100%;
+        width:50%;
+}
+
+.small-news-img  {
+    height: 180px;
+    width:100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+h5 {
+    color:antiquewhite;
+    font-family:Montserrat;
+    font-size: 10px;
+    top: 0px;
+    right:auto;
+    left:auto;
+    margin:0;
+    padding:1px 3px;
+    letter-spacing: 0.5px;
+}
+
+.small-text-box {
+    height: 100%;
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+h4 {
+    font-size: 20px;
+    color:rgb(144 194 68);
+    font-family:Montserrat;
+    padding-left:20px;
+    padding-right: 20px;
+    margin: 0;
+    align-self:flex-end;
 }
