--- a/code/style.css
+++ b/code/style.css
@@ -22,6 +22,7 @@ html {
 }
 
 .website-header h1 {
+  color: white;
   margin: auto 0;
   font-size: 45px;
 }
@@ -44,7 +45,7 @@ nav {
 nav ul li {
   list-style-type: none;
   display: inline-block;
-  padding: 10px 20px;
+  padding: 40px 50px;
 }
 
 nav ul li a {
@@ -85,16 +86,20 @@ button:hover {
   height: 500px;
 }
 
-.big-news h2 {
-  font-size: 1.2em;
-  width: 100%;
-  height: 100%;
-  top: 420px;
-  left: 8px;
-  right: 25px;
+.big-news p {
+  font-size: 16px;
+  padding: 40px 30px;
   color: white;
-  font-weight: bold;
+}
+
+.big-news h2 {
+  font-size: 2em;
+  justify-items: center;
+  left: 10px;
+  right: 350px;
+  color: white;
   position: absolute;
+  font-weight: bold;
   /*background-image: linear-gradient(
     to top,
     rgba(0, 0, 0, 1) 5%,
@@ -105,14 +110,14 @@ button:hover {
 }
 
 .big-news img {
-  width: 100%;
+  width: 50%;
   height: 100%;
   background-position: center;
   opacity: 0.5;
 }
 
 .big-news img:hover {
-  transform: scale(1.1);
+  /*transform: scale(1.1);*/
   cursor: pointer;
   transition: 0.3s;
 }
@@ -144,6 +149,18 @@ button:hover {
   width: 350px;
 }
 
+.website-footer {
+  color: white;
+  background-color: black;
+  height: 300px;
+}
+
+.website-footer h4 {
+  padding-top: 30px;
+  font-size: 30px;
+  text-align: center;
+}
+
 @media (min-width: 667px) and (max-width: 1024px) {
   .grid-parent {
     grid-template-columns: repeat(2, 1fr);
@@ -156,11 +173,14 @@ button:hover {
 
 @media (min-width: 1025px) {
   .grid-parent {
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     column-gap: 10px;
     row-gap: 10px;
+    width: 80%;
   }
   img {
   }
