new header and icon

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,11 @@
 html {
-  background: #0025ff;
+  background: #bdf0b7;
   color: #fff;
+}
+
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
