--- a/code/style.css
+++ b/code/style.css
@@ -39,25 +39,74 @@ h1 {
   grid-row-start: 4;
 
 }
-
-.navbar {
-  grid-column-start: 4;
-  grid-row-start: 1;
+label {
+  grid-column: 4;
+  grid-row: 4;
 }
+
+.trigger {
+  display:none;
+}
+
+.hamburger {
+  cursor: pointer;
+}
+
+.hamburger span {
+  height: 3px;
+  width: 30px;
+  background: #0D1837;
+  display: block;
+  margin-bottom: 5px;
+  position: relative;
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.trigger:checked ~ .hamburger span:first-child {
+  transform: rotate(45deg) ;
+  top: 8px; 
+}
+
+.trigger:checked ~ .hamburger span:last-child {
+  transform: rotate(-45deg);
+  top: -8px;
+  
+}
+
+.trigger:checked ~ .hamburger span:nth-child(2) {
+  opacity: 0;
+}
+
+nav {
+  display: none;
+  background: #87A5F7;
+  width: 25%;
+  padding: 10px;
+  margin-top: 2px;
+  position: absolute;
+  transition: right 0.3s ease-in-out;
+}
+
+.trigger:checked ~ nav {
+  display: block;
+  right: 0;
+  } 
+   
 
 ul {
   list-style-type: none;
-  width: 50px;
+  margin: 0;
+  padding: 0,
+    
 }
 
-ul li {
-  margin: 2px;
+li {
+  margin-bottom: 10px;
 }
 
 a {
-  font-size: 15px;
-  color: #FFFFFF;
   text-decoration: none;
+  color: #0D1837;
 }
 
 .big-news {
@@ -166,7 +215,8 @@ h2 {
     grid-column: 3 / 7;
   }
 
-  .navbar {
+  nav {
+    display: block;
     grid-column: 1 / 10;
     grid-row: 6;
     width: 90%;
@@ -226,5 +276,6 @@ h2 {
   
   .image-box {
     flex: 1 0 80%;
-  }  
+  }
+    
 }
