--- a/code/style.css
+++ b/code/style.css
@@ -53,18 +53,16 @@ nav {
 
 .nav-item:hover a {
   color: #f386a3;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 /* big news articel */
-
 .big-news {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color:#47bfb1;
-  margin: 0 8px 8px;
   padding: 0 0 10px;
 }
 
@@ -93,7 +91,65 @@ h1 {
   margin: 0;
 }
 
+/* many articles in one section right here */
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 
+  column-gap: 2px;
+  row-gap: 4px;
+  margin: 8px;
+}
+
+.grid-item {
+  display: grid;
+  background-color: #f386a3;
+  padding: 5px;
+}
+
+.grid-item>img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
+  border:#000 2px;
+}
+
+.grid-item>p {
+  color: #5c63ad;
+}
+
+a, a:visited {
+  text-decoration: none;
+}
+
+
+
+/* the end of story ie footer */
+footer {
+  width: 100%;
+  min-height: 50px;
+  background-color: #ffff;
+  font-size: 9px;
+  font-weight: 300;
+}
+
+
+
+.foot-links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  list-style: none;
+  padding: 0 10px 10px 0;
+  margin: 0;
+}
+
+.foot-links a {
+  display: inline-block;
+  padding: 3px;
+  text-decoration: none;
+  color: #000;
+}
 
 /* from old */
 @media (min-width: 668px) {
@@ -127,6 +183,20 @@ h1 {
     text-decoration: none;
     color: #000;
   }
+
+  .big-news {
+    margin: 0 8px 8px;
+  }
+
+  .grid-parent {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2px;
+    row-gap: 2px;
+    margin: 8px;
+  }
+  
+
+
 }
 
 @media (min-width: 1025px) {
@@ -138,4 +208,9 @@ h1 {
   img {
       width: 40%;
   }
+
+  .grid-parent {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 2px;
+    margin: 8px;
 }
