--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ html {
 .header {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(8, 10px);
+  grid-template-rows: repeat(8, 8px);
   justify-items: center;
   background: #87A5F7;
   color: #0D1837;
@@ -25,8 +25,7 @@ html {
 }
 
 .logo-image {
-  max-width: 65px;
-  max-height: 65px;
+  max-width: 55px;
   width: auto;
   height: auto;
   border: #0B35A8 solid 2px;
@@ -34,7 +33,7 @@ html {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 6vw;
   grid-column: 2 / 4;
   grid-row-start: 4;
 
@@ -150,15 +149,19 @@ h2 {
 }
 
 .info-boxes h3 {
-  color: #FFFFFF;
+  color: #0D1837;
   text-align: center;
   font-size: 20px;
 }
 
 .info-boxes p {
-  color: #87A5F7;
+  color: #0D1837;
   text-align: center;
   font-size: 15px;
+  border-bottom: 1px solid #87A5F7;
+  border-top: 1px solid #87A5F7;
+  margin: 2px 10px;
+  padding: 5px 0px;
 }
 
 .box  {
@@ -167,8 +170,7 @@ h2 {
   flex-direction: row-reverse;
   justify-content: start;
   align-items: center;
-  margin: 5px;
-  background-color: #0D1837;
+  border-top: 2px solid #87A5F7;
 }
 
 .info-boxes img {
@@ -182,10 +184,7 @@ h2 {
 .text-in-fatbox {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  border: 2px solid #0D1837;
   flex: 1 0 40%;
-  background-color:#0D1837;
 }
 
 .image-box {
@@ -215,11 +214,22 @@ h2 {
     grid-column: 3 / 7;
   }
 
+  .trigger  {
+    display: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  label {
+    grid-column: 1;
+    grid-row: 5;
+  }
   nav {
     display: block;
-    grid-column: 1 / 10;
-    grid-row: 6;
     width: 90%;
+    background: none;
   }
 
   ul {
@@ -233,7 +243,6 @@ h2 {
     }
 
   a {
-    color: #0D1837;
     font-size: 20px;
     padding: 10px;
   }  
